--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
         <title>QD testing</title>
     </head>
     <body>
-        <div id="taskCanvasParent"></div>
-        <div id="offscreenTaskParent"></div>
+        <div id="onscreen" style="display: flex">
+            <div id="behaviorCanvasParent"></div>
+            <div id="taskCanvasParent"></div>
+        </div>
+        <div id="offscreen">
+            <h1>Offscreen</h1>
+            <div style="display: flex">
+                <div id="offscreenBehaviorParent"></div>
+                <div id="offscreenTaskParent"></div>
+            </div>
+        </div>
         <script src="build/index.js" type="module"></script>
     </body>
 </html>
