button handlers for interface

--- a/index.html
+++ b/index.html
@@ -1,24 +1,45 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="UTF-8" />
+        <title>QD testing</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8" />
-    <title>QD testing</title>
-</head>
-
-<body>
-    <div id="onscreen" style="display: flex">
-        <div id="behaviorCanvasParent"></div>
-        <div id="taskCanvasParent"></div>
-    </div>
-    <div id="offscreen">
-        <h1>Offscreen</h1>
-        <div style="display: flex">
-            <div id="offscreenBehaviorParent"></div>
-            <div id="offscreenTaskParent"></div>
+    <body>
+        <div id="onscreen" style="display: flex">
+            <div>
+                <div id="behaviorCanvasParent"></div>
+            </div>
+            <div>
+                <div id="taskCanvasParent"></div>
+                <div width="540px" height="25px" style="text-align: center">
+                    <button
+                        style="width: 140px; height: 25px"
+                        id="bestSolutionButton"
+                    >
+                        Restore best solution
+                    </button>
+                    <button
+                        style="width: 130px; height: 25px"
+                        id="lastSolutionButton"
+                    >
+                        Restore last solution
+                    </button>
+                    <button
+                        style="width: 120px; height: 25px"
+                        id="randomSolutionButton"
+                    >
+                        Random solution
+                    </button>
+                    <button
+                        style="width: 120px; height: 25px"
+                        id="mutateSolutionButton"
+                    >
+                        Random change
+                    </button>
+                </div>
+            </div>
         </div>
-    </div>
-    <script src="build/index.js" type="module"></script>
-</body>
-
+        <script src="build/index.js" type="module"></script>
+    </body>
 </html>
